# port-for

./: .bumpversion.cfg  .coderabbit.yaml  .coveragerc  .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  Pipfile  README.rst  mypy.ini  pyproject.toml  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.rst  dependabot.yml
.github/workflows/: automerge.yml  build.yml  linters.yml  pr-check.yml  pre-commit.yml  pypi.yml  release.yml  tests-macos.yml  tests.yml
newsfragments/: +13d35d54.feature.rst  +1ec91daa.misc.rst  +21c8c8ba.misc.rst  +2354a68d.misc.rst  +303487e8.misc.rst  +30eb859b.misc.rst  +367bc0ff.break.rst  +387f657a.feature.rst  +3b5c4387.misc.rst  +4931c0fb.misc.rst  +62d52f94.misc.rst  +6bf4a259.misc.rst  +806e9e3a.misc.rst  +819b47b4.misc.rst  +85256f18.misc.rst  +8d12e36f.misc.rst  +95ea113c.misc.rst  +a0effdb5.misc.rst  +b61fb792.feature.rst  +b75cc6f2.misc.rst  +bc96ba57.misc.rst  +c4b6aa6c.misc.rst  +c6016397.misc.rst  +cfa7788e.misc.rst  +d39e0669.break.rst  +e5df767f.misc.rst  +eacf25cd.misc.rst  +f28c9ac6.misc.rst  +pep639.misc.rst  +reuse-build-workflow.misc.rst  +uv-build-backend.feature.rst  107.misc.rst  108.misc.rst  109.misc.rst  111.feature.rst  112.misc.rst  143.feature.rst  149.feature.rst  152.misc.rst  155.break.rst  (+7 more)
port_for/: __init__.py  _download_ranges.py  _ranges.py  api.py  cmd.py  docopt.py  ephemeral.py  exceptions.py  store.py  tests.py  utils.py
scripts/: port-for
src/port_for/: __init__.py  api.py  ephemeral.py  store.py  utils.py
tests/: __init__.py  test_cases.py  test_select_port.py  test_store.py
