[project]
name = "port-for"
version = "1.0.0"
description = "Utility that helps with local TCP ports management. It can find an unused TCP localhost port and remember the association."
readme = "README.rst"
keywords = ["port", "posix"]
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Mikhail Korobov", email = "kmike84@gmail.com"}
]
maintainers = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
requires-python = ">= 3.10"

[project.urls]
"Source" = "https://github.com/fizyk/port-for/"
"Bug Tracker" = "https://github.com/fizyk/port-for/issues"
"Changelog" = "https://github.com/fizyk/port-for/blob/v1.0.0/CHANGES.rst"

[project.scripts]
port-for = "port_for.cmd:main"

[dependency-groups]
dev = [
    "towncrier==25.8.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "coverage==7.14.0",
    "mypy==2.1.0; implementation_name == 'cpython'",
    "tbump==6.11.0",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "port_for"
module-root = ""
source-include = ["CHANGES.rst"]

[tool.pytest]
strict_xfail = true
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://github.com/fizyk/port-for/issues/{issue}>`__"

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.depr]
name = "Deprecations"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneous"
showcontent = true

[tool.ruff]
line-length = 100
target-version = 'py310'

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]
exclude = [
    "port_for/_download_ranges.py"
]


[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "1.0.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""


# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "port_for/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = '"Changelog" = "https://github.com/fizyk/port-for/blob/v{current_version}/CHANGES.rst"'

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "uv run towncrier build --version {new_version} --yes"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
