[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11" ]

[project]
name = "port-for"
version = "1.0.0"
description = """\
    Utility that helps with local TCP ports management. It can find an unused TCP localhost port \
    and remember the association.\
    """
readme = "README.rst"
keywords = [ "port", "posix" ]
license = "MIT"
license-files = [ "LICENSE.txt" ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[[project.authors]]
name = "Mikhail Korobov"
email = "kmike84@gmail.com"

[[project.maintainers]]
name = "Grzegorz Śliwiński"
email = "fizyk+pypi@fizyk.dev"

[project.scripts]
port-for = "port_for.cmd:main"

[project.urls]
Source = "https://github.com/fizyk/port-for/"
"Bug Tracker" = "https://github.com/fizyk/port-for/issues"
Changelog = "https://github.com/fizyk/port-for/blob/v1.0.0/CHANGES.rst"

[dependency-groups]
dev = [
    "coverage==7.14.2",
    "mypy==2.1.0; implementation_name=='cpython'",
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
    "tbump==6.11.0",
    "towncrier==25.8.0",
]

[tool.uv.build-backend]
module-name = "port_for"
module-root = ""
source-include = [ "CHANGES.rst" ]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
]
exclude = [ "port_for/_download_ranges.py" ]

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
# name = "publish"
# cmd = "./publish.sh"
[tool.pyproject-fmt]
column_width = 100
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
sub_table_spacing = "\n"

[tool.mypy]
ignore_missing_imports = false
follow_imports = "silent"
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true
pretty = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest]
filterwarnings = [ "error" ]
strict_xfail = true
testpaths = [ "tests" ]

[tool.tbump]

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made
[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "uv run towncrier build --version {new_version} --yes"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""

# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "port_for/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'Changelog = "https://github.com/fizyk/port-for/blob/v{current_version}/CHANGES.rst"'

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "1.0.0"
# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/fizyk/port-for/issues/{issue}>`__"
single_file = true

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.depr]
name = "Deprecations"
showcontent = true

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneous"
showcontent = true
