[metadata]
name = port-for
version = 0.6.0
url = https://github.com/kmike/port-for/
description = Utility that helps with local TCP ports management. It can find an unused TCP localhost port and remember the association.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = port, posix
license = MIT license
author = Mikhail Korobov
author_email = kmike84@gmail.com
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    =src
scripts =
    scripts/port-for

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    mock

[options.package_data]
port_for = py.typed

[pycodestyle]
max-line-length = 80
exclude = docs/*,build/*,venv/*

[pydocstyle]
ignore = D203,D212
match = '(?!docs|build|venv).*\.py'

[tool:pytest]
addopts =  -vvv --capture=no --showlocals --cov src/port_for --cov tests --ignore src/port_for/_download_ranges.py
testpaths = tests/
filterwarnings = error
xfail_strict = True